# modules/apps/headless/headless-object/headless-object-impl/rest-openapi.yaml
@@ -62,6 +62,28 @@ components:
                 -   actionIds
                 -   type
             type: object
+        ObjectEntryCMSBulkActionRequest:
+            description:
+                Represents the request for CMS bulk actions
+            properties:
+                ids:
+                    items:
+                        format: int64
+                        type: integer
+                    type: array
+                permissions:
+                    items:
+                        type: permission
+                    type: array
+        ObjectEntryCMSBulkActionResponse:
+            description:
+                Represents a list of batch engines jobs
+            properties:
+                ids:
+                    items:
+                        format: int64
+                        type: integer
+                    type: array
         ObjectEntryFolder:
             description:
                 Represents a object entry folder that contains objects entries and other object entry folders.
@@ -201,6 +223,44 @@ info:
     version: v1.0
 openapi: 3.0.1
 paths:
+    "/object-entry-cms-bulk-action/{bulkActionName}":
+        post:
+            description:
+                Execute the object entries bulk action.
+            parameters:
+                -   in: path
+                    name: bulkActionName
+                    required: true
+                    schema:
+                        type: string
+                -   in: query
+                    name: filter
+                    required: false
+                    schema:
+                        type: string
+                -   in: query
+                    name: search
+                    required: false
+                    schema:
+                        type: string
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: "#/components/schemas/ObjectEntryCMSBulkActionRequest"
+                    application/xml:
+                        schema:
+                            $ref: "#/components/schemas/ObjectEntryCMSBulkActionRequest"
+            responses:
+                200:
+                    content:
+                        application/json:
+                            schema:
+                                $ref: "#/components/schemas/ObjectEntryCMSBulkActionResponse"
+                        application/xml:
+                            schema:
+                                $ref: "#/components/schemas/ObjectEntryCMSBulkActionResponse"
+            tags: ["ObjectEntryCMSBulkAction"]
     "/object-entry-folders/{objectEntryFolderId}":
         delete:
             description:
